force-app/main/default/objects/Agent_Skills_Repo__c/Agent_Skills_Repo__c.object-meta.xml
<CustomObject>
    <description>Consolidated repository of agent roles, core skills, topic skills, and workflows.</description>
    <label>Agent Skills Repo</label>
    <nameField>
        <label>Instruction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agent Skills Repos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>