force-app/main/default/objects/Agent_Skills_Repo__c/fields/ApprovalState__c.field-meta.xml
<CustomField>
    <fullName>ApprovalState__c</fullName>
    <label>Approval State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NotSubmitted</fullName>
                <default>true</default>
                <label>Not Submitted</label>
            </value>
            <value>
                <fullName>InReview</fullName>
                <label>In Review</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>