force-app/main/default/objects/Agent_Skills_Repo__c/fields/EffectiveTo__c.field-meta.xml
<CustomField>
    <fullName>EffectiveTo__c</fullName>
    <label>Effective To</label>
    <type>DateTime</type>
</CustomField>