force-app/main/default/objects/Agent_Skills_Repo__c/fields/InstructionBody__c.field-meta.xml
<CustomField>
    <fullName>InstructionBody__c</fullName>
    <label>Instruction Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>