force-app/main/default/objects/Agent_Skills_Repo__c/fields/References__c.field-meta.xml
<CustomField>
    <fullName>References__c</fullName>
    <label>References</label>
    <length>32768</length>
    <type>LongTextArea</type>
    <description>Comma-separated list of dependency names: other skills, workflows, roles, or objects/actions (e.g. Agent_Context__c). Used when includeReferences is true.</description>
</CustomField>