force-app/main/default/objects/Agent_Skills_Repo__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Role</fullName>
            </value>
            <value>
                <fullName>Core_Skill</fullName>
                <label>Core Skill</label>
            </value>
            <value>
                <fullName>Skill</fullName>
            </value>
            <value>
                <fullName>Workflow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>