force-app/main/default/objects/Agent_Skills_Repo__c/fields/WhenToUse__c.field-meta.xml
<CustomField>
    <fullName>WhenToUse__c</fullName>
    <label>When To Use</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>